tests/baselines/reference/stringLiteralType.errors.txt
==== tests/cases/compiler/stringLiteralType.ts (1 errors) ====
    var x: 'hi';
           ~~~~
!!! stringLiteralType.ts(1,8): error TS1003: Identifier expected.
    
    function f(x: 'hi');
    function f(x: string);
    function f(x: any) {
    }